# lawdata

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  env.example  fly.toml  index.html  justfile  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: main.yml
app/: __main__.py  main.py  metadata.yml  requirements.txt
app/plugins/: advance_fts.py
app/queries/x/: arts_fts.sql  arts_fts.yml  case_fts.sql  case_ponencia_detail.sql  case_ponencia_detail.yml  code_mp.yml  code_mp_fts_id.yml  code_mp_history.yml  list_arts_init.sql  list_arts_init.yml  list_case_init.sql  list_case_init.yml  list_code_init.sql  list_stat_init.yml  statute_mp.yml  statute_mp_fts.sql  statute_mp_fts.yml  statute_mp_fts_id.sql  statute_mp_fts_id.yml  work_count.yml
app/scripts/: run.sh
config/: index.html
docker/: index.html
docs/: 1-unsecured.md  2-secure-local.md  3-secure-fly.md  config.md  docker.md  index.md  production.md
docs/use/: dev.md  docker.md  production.md
etc/: litestream-prod.yaml  litestream.example  metadata.yml
plugins/: advance_fts.py
production/: index.html
queries/x/: arts_fts.sql  case_fts.sql  case_fts.yml  code_list.sql  code_list.yml  code_list_initialization.sql  code_list_initialization.yml  code_list_paginated.yml  code_mp.sql  code_mp.yml  code_mp_fts.sql  code_mp_fts.yml  code_mp_fts_id.sql  code_mp_fts_id.yml  code_mp_history.sql  code_mp_history.yml  list_arts_init.sql  list_case_init.sql  list_code_init.sql  list_code_init.yml  list_stat_init.sql  list_stat_init.yml  statute_list_initialization.sql  statute_list_initialization.yml  statute_list_paginated.sql  statute_list_paginated.yml  statute_mp.sql  statute_mp.yml  statute_mp_fts.sql  statute_mp_fts_id.sql  statute_mp_fts_id.yml  work_count.sql
scripts/: run.sh
search/: search_index.json
tests/: test_version.py
use/dev/: index.html
use/docker/: index.html
use/production/: index.html
