[tool.poetry]
name = "lawdata"
version = "0.0.2"
description = "Datasette instance of corpus-x / corpus-pdf databases."
authors = ["Marcelino G. Veloso III <mars@veloso.one>"]
readme = "README.md"
license = "MIT"
homepage = "https://lawdata.xyz"
repository = "https://github.com/justmars/lawdata"
documentation = "https://justmars.github.io/lawdata"
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Legal Industry",
]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.21"
datasette = "^0.64"
datasette-pretty-json = "^0.2.2"
datasette-auth-tokens = "^0.3"
datasette-auth-github = "^0.13.1"
datasette-query-files = "^0.1.1"
pylts = "^0.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-datadir = "^1.4.1"
pytest-cov = "^2.12.1"
pre-commit = "^2.21"
black = "^23.1.0"
mkdocs = "^1.4.2"
mkdocstrings = { extras = ["python"], version = "^0.20.0" }
mkdocs-material = "^9.0.6"
notebook = "^6.5.2"

[tool.black]
target-version = ['py311']
line-length = 79
include = '.pyi?$'
exclude = '''
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
include_trailing_comma = 'True'

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
