[tool.poetry]
name = "lawdata"
version = "0.0.4"
description = "Datasette instance of corpus-x / corpus-pdf databases."
authors = ["Marcelino G. Veloso III <mars@veloso.one>"]
readme = "README.md"
homepage = "https://lawdata.xyz"
repository = "https://github.com/justmars/lawdata"
documentation = "https://justmars.github.io/lawdata"
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Legal Industry",
]

[tool.poetry.dependencies]
python = "^3.11"
datasette = "^0.64"
datasette-pretty-json = "^0.2.2"
datasette-auth-tokens = "^0.3"
datasette-auth-github = "^0.13.1"
datasette-query-files = "^0.1.1"
pylts = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-datadir = "^1.4.1"
pytest-cov = "^2.12.1"
pre-commit = "^2.21"
mkdocs = "^1.4.2"
mkdocstrings = { extras = ["python"], version = "^0.20.0" }
mkdocs-material = "^9.1"

[tool.ruff]
ignore = ["F401", "F403"]
fixable = ["F", "E", "W", "I001"]
select = ["F", "E", "W", "I001"]


[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
