[tool.poetry]
name = "lawdata"
version = "0.0.5"
description = "Datasette instance of corpus database."
authors = ["Marcelino G. Veloso III <mars@veloso.one>"]
readme = "README.md"
homepage = "https://lawdata.xyz"
repository = "https://github.com/justmars/lawdata"
documentation = "https://justmars.github.io/lawdata"
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Legal Industry",
]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
datasette = "^0.64"
datasette-pretty-json = "^0.2.2"
datasette-auth-tokens = "^0.3"
datasette-auth-github = "^0.13.1"
datasette-query-files = "^0.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
pytest-env = "^0.8.1"
pytest-datadir = "^1.4"
pytest-cov = "^4.1"
pre-commit = "^3.3"
mkdocs = "^1.4.2"
mkdocstrings = { extras = ["python"], version = "^0.22.0" }
mkdocs-material = "^9.1"

[tool.ruff]
ignore = ["F401", "F403"]
fixable = ["F", "E", "W", "I001"]
select = ["F", "E", "W", "I001"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
